--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Verify pull request
+name: CI
 
 on:
   pull_request:
@@ -25,17 +25,41 @@ jobs:
           --health-retries 5
     steps:
       - uses: actions/checkout@v1
+
+      - name: Cache nix binaries
+        id: cache-nix
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-nix-store
+        with:
+          path: /nix/store
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/shell.nix') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      - if: ${{ steps.cache-nix-store.outputs.cache-hit != 'true' }}
+        name: List the state of the nix store
+        continue-on-error: true
+        run: ls -l /nix/store
+
+      - uses: cachix/install-nix-action@v20
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
+
+      - name: Enter nix shell
+        run: nix-shell
+
       - uses: gitleaks/gitleaks-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
+
       - name: Install ruby dependencies
         env:
           RAILS_ENV: test
-        run: |
-          gem install bundler
-          bundle install --jobs 4 --retry 3
+        run: bundler install
+
       - name: Install javascript dependencies
         uses: pnpm/action-setup@v2
         with:
@@ -43,16 +67,22 @@ jobs:
           run_install: |
             - recursive: true
               args: [--frozen-lockfile, --strict-peer-dependencies]
+
       - name: Setup assets
         run: bundler exec rails assets:clean assets:precompile
+
       - name: Check ruby formatting
         run: bundler exec rubocop --fail-level=warning
+
       - name: Check js formatting
         run: pnpm run format:check
+
       - name: Check js lint
         run: pnpm run lint
+
       - name: Run js tests
         run: pnpm run test
+
       - name: Setup test database
         env:
           RAILS_ENV: test
@@ -63,6 +93,7 @@ jobs:
         run: |
           cp config/database.ci.yml config/database.yml
           rake db:create db:schema:load
+
       - name: Run ruby tests
         env:
           IS_CI: true
