--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,8 @@ jobs:
       - name: Install Ruby dependencies
         env:
           RAILS_ENV: test
-        run: nix-shell --run 'bundler'
+        run: |
+          nix-shell --run 'bundler config build.pg --with-pg-config=$(which pg_config) && bundler'
 
       - name: Install JavaScript dependencies
         run: |
