Updated Gemfile to install rspec; updated CI to use local rspec

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,4 +115,4 @@ jobs:
           POSTGRES_USER: rails_github_actions
           POSTGRES_PASSWORD: postgres
           PGPORT: ${{ job.services.postgres.ports[5432] }}
-        run: nix-shell --run 'rspec'
+        run: nix-shell --run 'bundler exec rspec'
