--- a/.github/workflows/on_merge_to_main.yml
+++ b/.github/workflows/on_merge_to_main.yml
@@ -84,6 +84,8 @@ jobs:
           terraform plan \
             -var app_image_uri=${{ env.DOCKER_REPO_URL }}:${{ env.DOCKER_IMAGE_TAG }} \
             -var public_ssh_key_file_path=public_ssh_key.pub \
+            -var db_username=${{ vars.DB_USERNAME }} \
+            -var db_password=${{ secrets.DB_PASSWORD }} \
             -input=false \
             -no-color \
             -out tf.plan
