Made rails process run as 'ruby' user; removed unnecessary commands in layers

--- a/.dockerignore
+++ b/.dockerignore
@@ -20,6 +20,10 @@ terraform/
 !.env.example
 config/master.key
 docker-compose.yml
+docker-compose.local.yml
 yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+Dockerfile
+README.md
+flake.*
