Updating update-infra paths

--- a/.github/workflows/update_infrastructure.yml
+++ b/.github/workflows/update_infrastructure.yml
@@ -9,6 +9,14 @@ on:
     branches: [ main ]
     paths:
       - 'terraform/**'
+      - '!app/**'
+      - '!bin/**'
+      - '!config/**'
+      - '!db/**'
+      - '!lib/**'
+      - '!public/**'
+      - '!Dockerfile'
+      - '!Gemfile.lock'
 
 
 env:
