--- a/.github/workflows/build_and_deploy_application.yml
+++ b/.github/workflows/build_and_deploy_application.yml
@@ -8,15 +8,9 @@ on:
   pull_request:
     branches: [ main ]
     paths:
-      - 'app/**'
-      - 'bin/**'
-      - 'config/**'
-      - 'db/**'
-      - 'lib/**'
-      - 'public/**'
+      - '**.rb'
+      - '**.yml'
       - 'Dockerfile'
-      - 'Gemfile.lock'
-      - '!terraform/**'
 
 
 env:
