--- a/.github/workflows/build_and_deploy_application.yml
+++ b/.github/workflows/build_and_deploy_application.yml
@@ -9,7 +9,8 @@ on:
     branches: [ main ]
     paths:
       - '**.rb'
-      - '**.yml'
+      - 'db/**.yml'
+      - 'config/**.yml'
       - 'Dockerfile'
 
 
