--- a/.github/workflows/on_merge_to_main.yml
+++ b/.github/workflows/on_merge_to_main.yml
@@ -1,19 +1,38 @@
 name: On merge to main
 
+#on:
+#  push:
+#    branches: [ main ]
+
 on:
-  push:
+  pull_request:
     branches: [ main ]
 
 env:
   DOCKER_REGISTRY_URL: ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.${{ vars.AWS_REGION }}.amazonaws.com
   DOCKER_REPO_URL: ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.${{ vars.AWS_REGION }}.amazonaws.com/${{ vars.ECR_REPO_NAME }}
-  DOCKER_IMAGE_TAG: ${{ github.sha }}
-
-# TODO: only build image if something has changed requiring a new image build
+  DOCKER_IMAGE_TAG: $(cat version)
 
 jobs:
+  changes:
+    runs-on: ubuntu-latest
+    permissions:
+      pull-requests: read
+    outputs:
+      version: ${{ steps.filter.outputs.version }}
+    steps:
+      - name: Checkout main
+        uses: actions/checkout@v2
+      - uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          filters: |
+            version:
+              - 'version'
+
   build-and-push-docker-image:
-    name: Build and push docker image
+    needs: [changes]
+    if: ${{ needs.changes.outputs.version == 'true' }}
     runs-on: ubuntu-latest
     permissions:
       id-token: write
@@ -50,7 +69,7 @@ jobs:
 
   update-infrastructure:
     name: Apply infrastructure updates
-    needs: [build-and-push-docker-image]
+    needs: [changes, build-and-push-docker-image]
     runs-on: ubuntu-latest
     permissions:
       id-token: write
