Added 'always' condition to update-infra

--- a/.github/workflows/on_merge_to_main.yml
+++ b/.github/workflows/on_merge_to_main.yml
@@ -1,17 +1,12 @@
 name: On merge to main
 
-#on:
-#  push:
-#    branches: [ main ]
-
 on:
-  pull_request:
+  push:
     branches: [ main ]
 
 env:
   DOCKER_REGISTRY_URL: ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.${{ vars.AWS_REGION }}.amazonaws.com
   DOCKER_REPO_URL: ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.${{ vars.AWS_REGION }}.amazonaws.com/${{ vars.ECR_REPO_NAME }}
-  DOCKER_IMAGE_TAG: $(cat version)
 
 jobs:
   changes:
@@ -42,6 +37,9 @@ jobs:
       - name: Checkout main
         uses: actions/checkout@v2
 
+      - name: Set DOCKER_IMAGE_TAG environment variable
+        run: echo "DOCKER_IMAGE_TAG=$(cat version)" >> $GITHUB_ENV
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
@@ -68,8 +66,8 @@ jobs:
             "RAILS_MASTER_KEY=${{ secrets.RAILS_MASTER_KEY }}"
 
   update-infrastructure:
-    name: Apply infrastructure updates
     needs: [changes, build-and-push-docker-image]
+    if: ${{ always() }}
     runs-on: ubuntu-latest
     permissions:
       id-token: write
@@ -80,6 +78,9 @@ jobs:
     steps:
       - name: Checkout main
         uses: actions/checkout@v2
+
+      - name: Set DOCKER_IMAGE_TAG environment variable
+        run: echo "DOCKER_IMAGE_TAG=$(cat version)" >> $GITHUB_ENV
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
