--- a/.github/workflows/on_merge_to_main.yml
+++ b/.github/workflows/on_merge_to_main.yml
@@ -80,7 +80,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set DOCKER_IMAGE_TAG environment variable
-        run: echo "DOCKER_IMAGE_TAG=$(cat version)" >> $GITHUB_ENV
+        run: echo "DOCKER_IMAGE_TAG=$(cat ../../../version)" >> $GITHUB_ENV
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
